# speculator

./: README.md  pyproject.toml
link-analysis-extension/: .gitignore  .vscodeignore  README.md  esbuild.js  example.link.md  jest.config.js  language-configuration.json  package.json  tsconfig.json
link-analysis-extension/src/: extension.ts
link-analysis-extension/src/commands/: exportGraphJson.ts
link-analysis-extension/src/diagnostics/: diagnosticsManager.ts
link-analysis-extension/src/graph/: graphBuilder.ts
link-analysis-extension/src/models/: types.ts
link-analysis-extension/src/parser/: parser.ts
link-analysis-extension/src/tree/: entityTreeProvider.ts
link-analysis-extension/src/util/: hash.ts  slug.ts
link-analysis-extension/src/webview/: graphPanel.ts
link-analysis-extension/src/workspace/: workspaceService.ts
link-analysis-extension/syntax/: link.tmLanguage.json
link-analysis-extension/test/: parser.test.ts
link-analysis-extension/webview/: vite.config.ts
link-analysis-extension/webview/src/: App.tsx  styles.css
link-analysis-extension/webview/src/graph/: CytoscapeGraph.tsx
speculator/: __init__.py  cli.py  crawler.py  parser.py  robots.py  storage.py  utils.py
